# r2d2_ros2_ws

./: README.md
install/: local_setup.sh  setup.sh
install/examples_rclpy_minimal_subscriber/lib/examples_rclpy_minimal_subscriber/: r2d2_arm_ctrl  subscriber_lambda  subscriber_member_function  subscriber_old_school
install/examples_rclpy_minimal_subscriber/share/examples_rclpy_minimal_subscriber/: package.sh  package.xml
install/r2d2_arm_ctrl/lib/r2d2_arm_ctrl/: arm_ctrl_sub  r2d2_arm_ctrl  subscriber_member_function
install/r2d2_arm_ctrl/share/r2d2_arm_ctrl/: package.bash  package.ps1  package.sh  package.xml  package.zsh
src/r2d2_arm_ctrl/: .gitignore  arm_ctrl_sub.py  setup.cfg  setup.py
src/r2d2_arm_ctrl/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/r2d2_arm_ctrl/install/r2d2_arm_ctrl/share/r2d2_arm_ctrl/: package.sh  package.xml
